[package]
name = "interrupts"
version = "0.1.0"
authors = ["k0pernicus <antonin.carette@gmail.com>"]

[dependencies]
x86_64 = "0.3.1"
vga = { path="../vga" }
intel_8259 = { git = "https://github.com/ar-OS/intel_8259", branch = "master" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
