[package]
name = "interrupts"
version = "0.1.3"
authors = ["k0pernicus <antonin.carette@gmail.com>"]

[dependencies]
x86_64 = "0.7.1"
vga = { git = "https://github.com/ar-OS/vga", tag = "v0.1.2" }
intel_8259 = { git = "https://github.com/ar-OS/intel_8259", tag = "v0.1.1" }
keyboard = { git = "https://github.com/ar-OS/keyboard", tag = "v0.1.1" }
spin = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
